--- a/index.html
+++ b/index.html
@@ -8,31 +8,54 @@
         header {
             background-color: #040404;
             height: 100px;
-            
+            display: flex;
         }
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+        }
+        ul {
+            list-style-type: none;
+            display: flex;
+            padding-top: 30px;
+            padding-left: 200px;
+        }
+        li {
+            padding-left: 60px;
+            color: white;
+            font-size: 20px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        main {
+            height: 2200px;
+            background-color: rgb(253, 251, 251);
+        }
+        footer {
+            height: 100px;
+            background-color: #040404;
         }
     </style>
 </head>
 <body>
     <header>
+        <img src="./assets/logo.png" height="100px" width="120px"/>
         <nav>
-            <img src="./assets/logo.png" height="100px" width="120px">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>       
+                <li>Contact</li>
+                <li><button style="margin-left: 20px; border-radius: 10px">Register</button></li>
+            </ul>
         </nav>
     </header>
     <main>
-    <aside>
-
-    </aside>
-    <section>
-        
-    </section>
-    <article>
-
-    </article>
+        <img src="./assets/cars.avif" width="100%"/>
+        <h2 style="text-align: center; font-size: 25px;">About Us</h2>
+        <section style="height: 400px; background-color: rgb(247, 244, 244); margin-top: 50px;">
+            <img src="./assets/cars.avif" width="300px" height="300px" margin="50px"/>
+            <p style="padding: 30px; font-size: 20px">Car Rental</p>
+        </section>
 
 
     </main>
