--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
                 <li>About</li>
                 <li>Services</li>       
                 <li>Contact</li>
-                <li><button style="margin-left: 20px; border-radius: 10px">Register</button></li>
+                <li>
+                    <div style="padding-left: 50px;">
+                    <button style="border-radius: 10px">Register</button>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
