--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         main {
             height: 2200px;
             background-color: rgb(253, 251, 251);
+            padding: 20px;
         }
         footer {
             height: 100px;
@@ -56,9 +57,9 @@
     <main>
         <img src="./assets/cars.avif" width="100%"/>
         <h2 style="text-align: center; font-size: 25px;">About Us</h2>
-        <section style="height: 400px; background-color: rgb(247, 244, 244); margin-top: 50px;">
+        <section style="height: 400px; display: flex; background-color: rgb(247, 244, 244); margin-top: 50px;">
             <img src="./assets/cars.avif" width="300px" height="300px" margin="50px"/>
-            <p style="padding: 30px; font-size: 20px">Car Rental</p>
+            <p style="padding: 50px; font-size: 20px">Car Rental</p>
         </section>
 
 
